<resources>
    <string name="app_name">BonScan</string>
    <string name="notRegistered">Not registered yet?</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="birthdate">Date of birth</string>
    <string name="favorite_recipes">Favorite recipes</string>
    <string name="alreadyRegistered">"Already registered? Go sign in "</string>
    <string name="email_hint">bon_scan@yahoo.com</string>
    <string name="title_activity_home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Hello">Hello</string>
    <string name="Scan">SCAN</string>
    <string name="Another_photo">Take another photo</string>
    <string name="Analyze">Analyze Bon</string>
    <string name="plus">+</string>
    <string name="finish">Finish</string>
    <string name="skip_the_scan_and_add_your_ingredients">Skip the scan and add your ingredients</string>
</resources>