<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="@string/sign_up"
        android:textColor="@color/black_green"
        android:textColorLink="@color/black_green"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87">

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:paddingStart="10dp"

            android:text="@string/email"
            android:textColor="@color/black_green"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:fadingEdge="none"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:errorEnabled="true"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:paddingStart="10dp"
            android:text="@string/password"
            android:textColor="@color/black_green"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:fadingEdge="none"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    app:errorEnabled="true"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:paddingStart="10dp"

            android:text="@string/confirm_password"
            android:textColor="@color/black_green"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:fadingEdge="none"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password2Input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:boxBackgroundColor="@color/white"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    app:errorEnabled="true"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/lato"
            android:onClick="registerButtonOnClick"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/orange"
            app:cornerRadius="20dp"
            app:elevation="4dp"
            app:shapeAppearance="?attr/shapeAppearanceSmallComponent" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:clickable="true"
            android:minHeight="48dp"
            android:onClick="onClickLogin"
            android:text="@string/alreadyRegistered"
            android:textColor="@color/black_green"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>